--- a/socio_seminar_project/References.bib
+++ b/socio_seminar_project/References.bib
@@ -9818,7 +9818,7 @@ The results reveal a complex interplay between ethnic and geographic variation i
 }
 
 @phdthesis{brown_pronominal_1988,
-	address = {Ann Arbor, MI},
+	address = {Austin, TX},
 	type = {{PhD}},
 	title = {Pronominal equivalence in a variable syntax},
 	copyright = {Database copyright ProQuest LLC; ProQuest does not claim copyright in the individual underlying works.},
@@ -9836,7 +9836,7 @@ The results indicate that the "weakening trend" in the Cajun pronoun system sugg
 }
 
 @phdthesis{smith_morphosyntactic_1994,
-	address = {Ann Arbor, MI},
+	address = {Seattle, WA},
 	type = {{PhD}},
 	title = {A morphosyntactic analysis of the verb group in {Cajun} {French}},
 	copyright = {Database copyright ProQuest LLC; ProQuest does not claim copyright in the individual underlying works.},
@@ -9870,7 +9870,7 @@ Access to French education varies: Some parishes offer French instruction, or ev
 }
 
 @phdthesis{byers_defining_1988,
-	address = {Ann Arbor, MI},
+	address = {Bloomington, IN},
 	type = {{PhD}},
 	title = {Defining norms for a non-standardized language: {A} study of verb and pronoun variation in {Cajun} {French}},
 	copyright = {Database copyright ProQuest LLC; ProQuest does not claim copyright in the individual underlying works.},
@@ -11134,7 +11134,7 @@ accommodation to other speakers.},
 }
 
 @phdthesis{rottet_language_1995,
-	address = {Ann Arbor, MI},
+	address = {Bloomington, IN},
 	type = {{PhD}},
 	title = {Language shift and language death in the {Cajun} {French}-speaking communities of {Terrebonne} and {Lafourche} parishes, {Louisiana}},
 	copyright = {Database copyright ProQuest LLC; ProQuest does not claim copyright in the individual underlying works.},
@@ -20305,4 +20305,156 @@ research.},
 	month = mar,
 	year = {2019},
 	keywords = {Bayesian, Econometrics, Environmetrics, OfficialStatistics, Psychometrics, SocialSciences, SpatioTemporal}
+}
+
+@article{forrest_community_2015,
+	title = {Community rules and speaker behavior: {Individual} adherence to group constraints on ({ING})},
+	volume = {27},
+	issn = {0954-3945, 1469-8021},
+	shorttitle = {Community rules and speaker behavior},
+	url = {http://www.cambridge.org/core/journals/language-variation-and-change/article/community-rules-and-speaker-behavior-individual-adherence-to-group-constraints-on-ing/1B1A00058DAE6BE9DC23806C012F28DE},
+	doi = {10.1017/S0954394515000137},
+	abstract = {This paper investigates the degree to which individual speakers follow the morphosyntactic hierarchy governing grammatical constraints on (ING) in the Southern U.S. city of Raleigh, North Carolina. (ING) was used as the variable of study for its well-studied internal constraints and comparability to previous studies on the internal constraints of t/d deletion. A lexical category constraint hierarchy for the community was determined via multivariate mixed-effects statistical models, and each speaker's (ING) pattern was compared to this hierarchy. Results show maintenance in grammatical constraints even when taking phonological factors into account, unlike some work on t/d deletion. Uniformity exists across speakers with respect to the ordering of internal constraints despite the overall decline in rates of –in over time, but constraint weights (expressed as log odds) vary significantly from speaker to speaker, with no correlates to social or internal factors. These results have consequences for representation of individuals in terms of an aggregate pattern, questioning the consistency of factor weight values at the speaker level despite consistent ordering of constraints.},
+	language = {en},
+	number = {3},
+	urldate = {2019-04-26},
+	journal = {Language Variation and Change},
+	author = {Forrest, Jon},
+	month = oct,
+	year = {2015},
+	pages = {377--406},
+	file = {Full Text PDF:C\:\\Users\\josh8\\Zotero\\storage\\4EGZMNJD\\Forrest - 2015 - Community rules and speaker behavior Individual a.pdf:application/pdf;Snapshot:C\:\\Users\\josh8\\Zotero\\storage\\49P6H8R2\\1B1A00058DAE6BE9DC23806C012F28DE.html:text/html}
+}
+
+@phdthesis{forrest_firm-specific_2018,
+	type = {{PhD}},
+	title = {A {Firm}-{Specific} {Analysis} of {Southern} {US} {English} and {Workplace} {Processes}},
+	school = {North Carolina State University},
+	author = {Forrest, Jon},
+	month = sep,
+	year = {2018},
+	file = {etd.pdf:C\:\\Users\\josh8\\Zotero\\storage\\ZT77ICSL\\etd.pdf:application/pdf}
+}
+
+@article{forrest_dynamic_2017,
+	title = {The dynamic interaction between lexical and contextual frequency: {A} case study of ({ING})},
+	volume = {29},
+	issn = {0954-3945, 1469-8021},
+	shorttitle = {The dynamic interaction between lexical and contextual frequency},
+	url = {http://www.cambridge.org/core/journals/language-variation-and-change/article/dynamic-interaction-between-lexical-and-contextual-frequency-a-case-study-of-ing/7FA092713E7735395C5C06EB7BBFFC64},
+	doi = {10.1017/S0954394517000072},
+	abstract = {To identify how contextual usage frequency and lexical frequency interact when controlling for traditional linguistic constraints, this study analyzes the effect of frequency on (ING), taking into account a word's frequent context of occurrence. The data consist of 13,167 tokens of (ING) from interviews with 132 speakers conducted in Raleigh, North Carolina. Results from mixed-effect logistic regression show a strong effect of frequency on the realization of (ING), and this effect interacts with phonological context of occurrence. Frequent occurrence in environments that favor -in amplify the effect of lexical frequency; conversely, frequent occurrence in environments that favor –ing dampen the effect of overall frequency. Frequency also interacts with year of birth, showing an entrenchment of high-frequency words, lagging behind the community change toward the –ing variant in apparent time. Overall, these findings support the usage-based position of frequency effects as the result of a dynamic interplay between context of use and cognitive systems.},
+	language = {en},
+	number = {2},
+	urldate = {2019-04-26},
+	journal = {Language Variation and Change},
+	author = {Forrest, Jon},
+	month = jul,
+	year = {2017},
+	pages = {129--156},
+	file = {Full Text PDF:C\:\\Users\\josh8\\Zotero\\storage\\ULQIKUH3\\Forrest - 2017 - The dynamic interaction between lexical and contex.pdf:application/pdf;Snapshot:C\:\\Users\\josh8\\Zotero\\storage\\REUAKMEG\\7FA092713E7735395C5C06EB7BBFFC64.html:text/html}
+}
+
+@techreport{national_commission_for_the_protection_of_human_subjects_of_biomedical_and_behavioral_research_belmont_1979,
+	title = {The {Belmont} {Report}: {Ethical} {Principles} and {Guidelines} for the {Protection} of {Human} {Subjects} of {Research}},
+	abstract = {On July 12, 1974, the National Research Act (Pub. L. 93-348) was signed into law, there-by creating the National Commission for the Protection of Human Subjects of Biomedical and Behavioral Research. One of the charges to the Commission was to identify the basic ethical principles that should underlie the conduct of biomedical and behavioral research involving human subjects and to develop guidelines which should be followed to assure that such research is conducted in accordance with those principles. In carrying out the above, the Commission was directed to consider: (i) the boundaries between biomedical and behavioral research and the accepted and routine practice of medicine, (ii) the role of assessment of risk-benefit criteria in the determination of the appropriateness of research involving human subjects, (iii) appropriate guidelines for the selection of human subjects for participation in such research and (iv) the nature and definition of informed consent in various research settings.},
+	language = {English},
+	institution = {Department of Health, Education, and Welfare},
+	author = {{National Commission for the Protection of Human Subjects of Biomedical and Behavioral Research}},
+	month = apr,
+	year = {1979},
+	pages = {10},
+	file = {The Belmont Report.pdf:C\:\\Users\\josh8\\Zotero\\storage\\7CYZGFQ6\\The Belmont Report.pdf:application/pdf}
+}
+
+@techreport{the_world_medical_association_declaration_2013,
+	address = {Fortaleza, Brazil},
+	title = {The {Declaration} of {Helsinki}: {Ethical} {Principles} for {Medical} {Research} {Involving} {Human} {Subjects}},
+	url = {https://www.wma.net/policies-post/wma-declaration-of-helsinki-ethical-principles-for-medical-research-involving-human-subjects/},
+	language = {English},
+	urldate = {2019-04-27},
+	author = {{The World Medical Association}},
+	month = oct,
+	year = {2013},
+	pages = {4},
+	file = {Snapshot:C\:\\Users\\josh8\\Zotero\\storage\\JTC7D6J9\\wma-declaration-of-helsinki-ethical-principles-for-medical-research-involving-human-subjects.html:text/html;wma-declaration-of-helsinki-ethical-principles-for-medical-research-involving-human-subjects.pdf:C\:\\Users\\josh8\\Zotero\\storage\\AUT9TCUM\\wma-declaration-of-helsinki-ethical-principles-for-medical-research-involving-human-subjects.pdf:application/pdf}
+}
+
+@misc{noauthor_wordreference.com_nodate,
+	title = {{WordReference}.com},
+	url = {http://www.wordreference.com/},
+	urldate = {2019-04-27},
+	journal = {WordReference},
+	file = {English to French, Italian, German & Spanish Dictionary - WordReference.com:C\:\\Users\\josh8\\Zotero\\storage\\XEU9227N\\www.wordreference.com.html:text/html}
+}
+
+@misc{noauthor_french_nodate,
+	title = {French {Conjugation}},
+	url = {http://conjugator.reverso.net/conjugation-french.html},
+	urldate = {2019-04-27},
+	journal = {Reverso Conjugator},
+	file = {French Conjugation\: French verb, future, participle, irregular verbs | Reverso Conjugator:C\:\\Users\\josh8\\Zotero\\storage\\D57GT8D3\\conjugation-french.html:text/html}
+}
+
+@inproceedings{hulden_foma:_2009,
+	address = {Stroudsburg, PA, USA},
+	series = {{EACL} '09},
+	title = {Foma: {A} {Finite}-state {Compiler} and {Library}},
+	shorttitle = {Foma},
+	url = {http://dl.acm.org/citation.cfm?id=1609049.1609057},
+	doi = {10.3115/1609049.1609057},
+	abstract = {Foma is a compiler, programming language, and C library for constructing finite-state automata and transducers for various uses. It has specific support for many natural language processing applications such as producing morphological and phonological analyzers. Foma is largely compatible with the Xerox/PARC finite-state toolkit. It also embraces Unicode fully and supports various different formats for specifying regular expressions: the Xerox/PARC format, a Perl-like format, and a mathematical format that takes advantage of the 'Mathematical Operators' Unicode block.},
+	language = {English},
+	urldate = {2019-04-28},
+	booktitle = {Proceedings of the 12th {Conference} of the {European} {Chapter} of the {Association} for {Computational} {Linguistics}: {Demonstrations} {Session}},
+	publisher = {Association for Computational Linguistics},
+	author = {Hulden, Mans},
+	year = {2009},
+	note = {event-place: Athens, Greece},
+	pages = {29--32},
+	file = {ACM Full Text PDF:C\:\\Users\\josh8\\Zotero\\storage\\UHBGKY37\\Hulden - 2009 - Foma A Finite-state Compiler and Library.pdf:application/pdf}
+}
+
+@techreport{karttunen_finite-state_1993,
+	address = {Palo Alto, CA},
+	type = {Technical {Report}},
+	title = {Finite-state lexicon compiler},
+	number = {ISTL-NLTT-1993-04-02},
+	institution = {Xerox Palo Alto Research Center},
+	author = {Karttunen, Lauri},
+	month = apr,
+	year = {1993}
+}
+
+@inproceedings{schmid_probabilistic_1994,
+	address = {Manchester, UK},
+	title = {Probabilistic {Part}-of-{Speech} {Tagging} {Using} {Decision} {Trees}},
+	language = {English},
+	booktitle = {Proceedings of {International} {Conference} on {New} {Methods} in {Language} {Processing}},
+	author = {Schmid, Helmut},
+	year = {1994},
+	pages = {9},
+	file = {tree-tagger1.pdf:C\:\\Users\\josh8\\Zotero\\storage\\85NVR9HB\\tree-tagger1.pdf:application/pdf}
+}
+
+@inproceedings{brugman_annotating_2004,
+	address = {Lisbon, Portugal},
+	title = {Annotating {Multi}-media/{Multi}-modal resources with {ELAN}},
+	url = {https://tla.mpi.nl/tools/tla-tools/elan/},
+	language = {English},
+	urldate = {2019-04-30},
+	booktitle = {Proceedings of the {Fourth} {International} {Conference} on {Language} {Resources} and {Evaluation}},
+	author = {Brugman, Hennie and Russel, Albert},
+	month = may,
+	year = {2004},
+	note = {institute: Max Planck Institute for Psycholinguistics, The Language Archive, Nijmegen, The Netherlands},
+	pages = {2065--2068},
+	file = {Full Text PDF:C\:\\Users\\josh8\\Zotero\\storage\\47T3V7WX\\Brugman et Russel - 2004 - Annotating Multi-mediaMulti-modal Resources with .pdf:application/pdf;Snapshot:C\:\\Users\\josh8\\Zotero\\storage\\3J87YTTZ\\L04-1285.html:text/html}
+}
+
+@misc{bnc_consortium_british_2007,
+	title = {The {British} {National} {Corpus}},
+	url = {http://www.natcorp.ox.ac.uk/},
+	author = {{BNC Consortium}},
+	year = {2007}
 }
