--- a/socio_seminar_project/interview_module.tex
+++ b/socio_seminar_project/interview_module.tex
@@ -1,107 +1,96 @@
-\documentclass{article}
-    % Packages and settings
-    \usepackage{fontspec}
-        \setmainfont{Charis SIL}
-    % Paper info
-    \title{Interview Module: Locals}
-    \author{Joshua McNeill}
-    \date{March 18th, 2019}
-\begin{document}
-    \maketitle
-    The idea behind this module is to elicit tokens of the third person plural subject pronoun via talking about ``local people'' and never using the pronoun in the questions. These interviews are taking place the week following Saint Patrick's Day, hence using the holiday as a jumping off point for the module, but any other recent event can be filled into Section \ref{sec:warmup} if the module is reused at other times of the year.
-    
-    \begin{enumerate}
-        \section{Warmup Questions}
-            \label{sec:warmup}
-            \item Comment ça va?\\
-                  `How's it going?'
-            \item T'as fait quelque chose de bon pour la fête de la Saint-Patrick?\\
-                  `Did you have a good Saint Patrick's Day?'
-            \item Quoi ce qui se passe dans ton village pendant la Saint-Patrick?\\
-                  `What happens in your town on Saint Patrick's Day?'
-            \item Quoi ce que ta famille et tes amis fait pendant la Saint-Patrick?\\
-                  `What do your family and friends do on Saint Patrick's Day?'
-        \section{Module}
-            \item Éoù tu restes?\\
-                  `Where do you live?'
+The idea behind this module is to elicit tokens of the third person plural subject pronoun via talking about ``local people'' and never using the pronoun in the questions. These interviews took place the week following Saint Patrick's Day, hence using the holiday as a jumping off point for the module, but any other recent event can be filled into Section (\ref{sec:warmup}) if the module is reused at other times of the year.
+
+\begin{enumerate}
+    \subsection{Warmup Questions}
+        \label{sec:warmup}
+        \item Comment ça va?\\
+              `How's it going?'
+        \item T'as fait quelque chose de bon pour la fête de la Saint-Patrick?\\
+              `Did you have a good Saint Patrick's Day?'
+        \item Quoi ce qui se passe dans ton village pendant la Saint-Patrick?\\
+              `What happens in your town on Saint Patrick's Day?'
+        \item Quoi ce que ta famille et tes amis fait pendant la Saint-Patrick?\\
+              `What do your family and friends do on Saint Patrick's Day?'
+    \subsection{Module Proper}
+        \item Éoù tu restes?\\
+              `Where do you live?'
+        \begin{enumerate}
+            \item Ça c'est éoù t'as grandi, aussit?\\
+                  `Is that where you grew up, too?'
+            \item Ta famille reste dans le même village que toi?\\
+                  `Does your family live in the same town as you?'
+        \end{enumerate}
+        \item Quoi ce que tu penses pour le monde dans ton village?\\
+              Le monde dans ton village est comment?\\
+              `What are the people in your town like?'
+        \item Quelles qualités de jobs le monde fait dans ton village?\\
+              `What kind of work do the people in your town do?'
+        \begin{enumerate}
+            \item Ces jobs, c'est payant/profitable?\\
+                  La paye pour ces jobs, c'est bon?\\
+                  `Do people there get paid well to do that?'
+        \end{enumerate}
+        \item Tout quelqu'un commence à travailler après avoir gradué du high school/lycée dans ton village?\\
+              `Does everyone start working after graduating from high school in your town?'
             \begin{enumerate}
-                \item Ça c'est éoù t'as grandi, aussit?\\
-                      `Is that where you grew up, too?'
-                \item Ta famille reste dans le même village que toi?\\
-                      `Does your family live in the same town as you?'
+                \item Sinon, quoi ce que ces personnes fait?\\
+                      `If not, what do these people do?'
             \end{enumerate}
-            \item Quoi ce que tu penses pour le monde dans ton village?\\
-                  Le monde dans ton village est comment?\\
-                  `What are the people in your town like?'
-            \item Quelles qualités de jobs le monde fait dans ton village?\\
-                  `What kind of work do the people in your town do?'
+        \item Comment le monde dans ton village se traitent?\\
+              `How do the people in your town treat each other?'
+        \item Comment le monde dans ton village traitent les étrangers?\\
+              `How do the people in your town treat strangers?'
+        \begin{enumerate}
+            \item Les étrangers visitent souvent ton village?\\
+                  `Do strangers visit your town often?'
+            \item Quoifaire/pourquoi les étrangers visitent?\\
+                  `What do strangers visit for?'
+        \end{enumerate}
+        \item Y'a plein de monde qui déménage à ton village ou non?\\
+              `Do a lot of people move to your town?'
+        \begin{enumerate}
+            \item Quoifaire/pourquoi ces personnes déménagent là?\\
+                  `What do those people move there for?'
+            \item Combien longtemps ces personnes restent là, typiquement?\\
+                  `How long do those people tend to stay?'
+        \end{enumerate}
+        \item Le monde local quitte souvent ton village?\\
+              `Do a lot of local people leave your town?'
+        \begin{enumerate}
+            \item Éoù ces personnes va?\\
+                  `Where do the locals move to?'
+            \item Quoi ce que ces personnes fait là-bas?\\
+                  `What do these people do there?'
+            \item Ces personnes reviennent back, d'habitude?\\
+                  `These people come back, usually?'
+        \end{enumerate}
+        \item Y'a des festivals ou des fêtes qu'a lieu dans ton village?\\
+              `Are there festivals or celebrations that take place in your town?'
             \begin{enumerate}
-                \item Ces jobs, c'est payant/profitable?\\
-                      La paye pour ces jobs, c'est bon?\\
-                      `Do people there get paid well to do that?'
+                \item Équel est le plus grand?\\
+                      `Which is the biggest?'
+                \item Équand ça a commencé?\\
+                      `When did that start?'
+                \item Qui a commencé?\\
+                      `Who started it?'
             \end{enumerate}
-            \item Tout quelqu'un commence à travailler après avoir gradué du high school/lycée dans ton village?\\
-                  `Does everyone start working after graduating from high school in your town?'
-                \begin{enumerate}
-                    \item Sinon, quoi ce que ces personnes fait?\\
-                          `If not, what do these people do?'
-                \end{enumerate}
-            \item Comment le monde dans ton village se traitent?\\
-                  `How do the people in your town treat each other?'
-            \item Comment le monde dans ton village traitent les étrangers?\\
-                  `How do the people in your town treat strangers?'
-            \begin{enumerate}
-                \item Les étrangers visitent souvent ton village?\\
-                      `Do strangers visit your town often?'
-                \item Quoifaire/pourquoi les étrangers visitent?\\
-                      `What do strangers visit for?'
-            \end{enumerate}
-            \item Y'a plein de monde qui déménage à ton village ou non?\\
-                  `Do a lot of people move to your town?'
-            \begin{enumerate}
-                \item Quoifaire/pourquoi ces personnes déménagent là?\\
-                      `What do those people move there for?'
-                \item Combien longtemps ces personnes restent là, typiquement?\\
-                      `How long do those people tend to stay?'
-            \end{enumerate}
-            \item Le monde local quitte souvent ton village?\\
-                  `Do a lot of local people leave your town?'
-            \begin{enumerate}
-                \item Éoù ces personnes va?\\
-                      `Where do the locals move to?'
-                \item Quoi ce que ces personnes fait là-bas?\\
-                      `What do these people do there?'
-                \item Ces personnes reviennent back, d'habitude?\\
-                      `These people come back, usually?'
-            \end{enumerate}
-            \item Y'a des événements spéciaux qu'a lieu dans ton village?\\
-                  `Are there special events that take place in your town?'
-                \begin{enumerate}
-                    \item Équel est le plus grand?\\
-                          `Which is the biggest?'
-                    \item Équand ça a commencé?\\
-                          `When did that start?'
-                    \item Qui a commencé?\\
-                          `Who started it?'
-                \end{enumerate}
-            \item Quoi c'est la plus grande plainte que le monde dans ton village semble partager?\\
-                  `What is the biggest complaint that the people in your town seem to share?'
-            \item Quoi c'est la politique du monde dans ton village?\\
-                  `What are the politics of the people in your town?'
-            \begin{enumerate}
-                \item Quoi ce que tu penses pour leur politique, toi?\\
-                      `What do you think of their politics?'
-                \item Quoi ce que tu penses pour les politiciens que le monde dans ton village électe?\\
-                      `What do you think of the politicians that the people in your town elect?'
-            \end{enumerate}
-        \section{Demographics}
-        \item Quel âge qu t'as?\\
-              `How old are you?'
-        \item Tu fais quoi comme métier?\\
-              `What is your profession?'
-        \item T'as été au collège?\\
-              `Did you go to college?'
-        \item Comment t'as appris le français?\\
-              `How did you learn French?'
-    \end{enumerate}
-\end{document}
+        \item Quoi c'est la plus grande plainte que le monde dans ton village semble partager?\\
+              `What is the biggest complaint that the people in your town seem to share?'
+        \item Quoi c'est la politique du monde dans ton village?\\
+              `What are the politics of the people in your town?'
+        \begin{enumerate}
+            \item Quoi ce que tu penses pour leur politique, toi?\\
+                  `What do you think of their politics?'
+            \item Quoi ce que tu penses pour les politiciens que le monde dans ton village électe?\\
+                  `What do you think of the politicians that the people in your town elect?'
+        \end{enumerate}
+    \subsection{Demographics}
+    \item Quel âge qu t'as?\\
+          `How old are you?'
+    \item Tu fais quoi comme métier?\\
+          `What is your profession?'
+    \item T'as été au collège?\\
+          `Did you go to college?'
+    \item Comment t'as appris le français?\\
+          `How did you learn French?'
+\end{enumerate}
